# Ins_mechanical_arrangement

./: CMakeLists.txt  README.md  default.yaml
include/: config.h  imuInitialization.h  rotation.h
src/: CMakeLists.txt  CMakeLists.txt~  Rotation.cpp  Rotation.cpp~  config.cpp  config.cpp~  imuInitialization.cpp~
test/: CMakeLists.txt  stim.cpp  stim.cpp~
